# escpos-viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  RELEASING.md  build.rs  install.sh  release-plz.toml  setup.iss
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: auto-merge-release-plz.yml  ci-linux.yml  release-linux.yml  release-plz.yml  windows-release.yml
docs/: CONFIGURAR_IMPRESORA_TCP_9100.txt
packaging/: Makefile  escpos-viewer.desktop  linux-release.sh
src/: app.rs  app_icon.rs  escpos.rs  hex_dump.rs  main.rs  model.rs  printer_setup.rs  tcp_capture.rs  tray.rs  window_control.rs
